# EKG_Agent

./: .env  .env.example  README.md  TECHNICAL_ARCHITECTURE_REPORT.md  environments.txt  pyproject.toml  test_api.py  verify_api.py  verify_app.py  verify_script.py
app/: __init__.py  config.py  main.py  web_ui.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  admin.py  approval.py  chat.py  knowledge.py
app/bootstrap/: __init__.py  excel_bootstrap.py
app/codegen/: __init__.py  manager.py
app/core/: __init__.py  approval.py  events.py  models.py  safe_agent_llm.py  security_runtime.py  workflow.py
app/db/: __init__.py  component_repo.py  sql_sandbox.py  version_store.py
app/integrations/: __init__.py  agent_codex_adapter.py  warehouse_ai_adapter.py
app/knowledge/: __init__.py  bootstrap_data.py  entity_linker.py  graph_rag.py  ontology_store.py
app/llm/: __init__.py  client.py
data/: components.db  ontology_graph.json
data/audit/: security_audit.jsonl
data/versions/: 100fbcdb-bf98-40b5-b7b7-dbedcf4ea535.db  17b66a39-ab9e-483f-a3db-5d5b39eaa0e9.db  40286b4d-94ed-4d1c-b4fd-27bb1f74f890.db  6a8c9f67-f97e-4531-8685-2946cc3ef203.db  6b7f8216-60e4-40a5-ac2d-36ae87041480.db  7d5963ea-dab8-4ecb-a4e6-d3468b3a8a3d.db  versions_index.json
scripts/: bootstrap_demo.py  smoke_test.py
