[project]
name = "ekg-agent-refactor"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "openai>=1.63.0",
    "openpyxl>=3.1.5",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/scripts",
    "/README.md",
    "/pyproject.toml",
    "/.env.example",
]

[tool.ruff]
line-length = 100
